--- a/deployment/k8s/aws-secret.yaml
+++ b/deployment/k8s/aws-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: aws-secret
 type: Opaque
 data:
-  aws_access_key_id: QUtJQUlQRk9US0RUVFoyTVBDREE=
-  aws_secret_access_key: VEpVdDRBbFVpMlIxWmh4LzZLQnVmS0k0a08yTUwvaXVLelNOL3lzOQ==
+  aws_access_key_id: 
+  aws_secret_access_key:
